welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:7: error: value k is not a member of Array[Int]
		vale = nums k;
                            ^