welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
var n = nums.length;
var vale = nums(0);

for (k <- 0 to n-1) {
	if (vale < nums(k)) {
		vale = nums k;
	}
}
return vale;
}
